--- a/netflix/streaming/templates/streaming/playlist.html
+++ b/netflix/streaming/templates/streaming/playlist.html
@@ -5,19 +5,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Nunito:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <title>My Playlist</title>
 </head>
 <body>
     <header>
-        <h1>My Playlist</h1>
-        <nav>
-            <a href="{% url 'home' %}">Home</a>
-            <a href="{% url 'playlist' %}">Playlist</a>
-        </nav>
+        <div class="header-left">
+            <form action="{% url 'search-movies' %}" method="get" class="search-form">
+                <img src="{% static 'img/magnifying-glass.png' %}" alt="Buscar" style="width: 20px; vertical-align: middle; margin-right: 10px;">
+                <input type="text" name="q" placeholder="Search..." class="search-bar">
+            </form>
+        </div>
+        <div class="header-center">
+            <h1>My Playlist</h1>
+        </div>
+        <div class="header-right">
+            <nav>
+                <a href="{% url 'home' %}">
+                    <img src="{% static 'img/home.png' %}" alt="Home" style="width: 24px; vertical-align: middle; margin-right: 5px;">
+                    Home
+                </a>
+                <a href="{% url 'playlist' %}">
+                    <img src="{% static 'img/checklist.png' %}" alt="Playlist" style="width: 24px; vertical-align: middle; margin-right: 5px;">
+                    Playlist
+                </a>
+            </nav>
+        </div>
     </header>
     <main>
-        <h2>Movies in My Playlist</h2>
+        <h2 class="section-title">Movies in my Playlist</h2>
         <div class="movie-grid">
             {% for movie in playlists.movies.all %}
             <div class="movie-card">
@@ -27,12 +44,20 @@
                     <p>{{ movie.release_date|date:"Y" }}</p>
                     <p>{{ movie.description|truncatechars:100 }}</p>
                 </div>
+                <form action="{% url 'add-to-playlist' movie.id %}" method="post" class="star-form">
+                    {% csrf_token %}
+                    <button type="submit" class="add-to-playlist-button favourited">
+                        &#9733; <!-- La estrella siempre será roja en la playlist -->
+                    </button>
+                </form>
+                
+                
             </div>
             {% endfor %}
         </div>
     </main>
     <footer>
-        <p>&copy; 2024 Netflix</p>
+        <p></p>
     </footer>
 </body>
 </html>
