--- a/netflix/streaming/templates/streaming/playlist.html
+++ b/netflix/streaming/templates/streaming/playlist.html
@@ -34,28 +34,36 @@
         </div>
     </header>
     <main>
-        <h2 class="section-title">Movies in my Playlist</h2>
+        <h2 class="section-title">Movies in My Playlist</h2>
         <div class="movie-grid">
             {% for movie in playlists.movies.all %}
             <div class="movie-card">
-                <img src="https://image.tmdb.org/t/p/w500{{ movie.poster_path }}" alt="{{ movie.title }}" class="movie-poster">
-                <div class="movie-info">
-                    <h3>{{ movie.title }}</h3>
-                    <p>{{ movie.release_date|date:"Y" }}</p>
-                    <p>{{ movie.description|truncatechars:100 }}</p>
+                <!-- Movie Display -->
+            </div>
+            {% endfor %}
+        </div>
+    
+        <h2 class="section-title">Series in My Playlist</h2>
+        <div class="series-grid">
+            {% for series in playlists.series.all %}
+            <div class="series-card">
+                <img src="https://image.tmdb.org/t/p/w500{{ series.poster_path }}" alt="{{ series.title }}" class="series-poster">
+                <div class="series-info">
+                    <h3>{{ series.title }}</h3>
+                    <p>{{ series.release_date|date:"Y" }}</p>
+                    <p>{{ series.description|truncatechars:100 }}</p>
                 </div>
-                <form action="{% url 'add-to-playlist' movie.id %}" method="post" class="star-form">
+                <form action="{% url 'add-to-series-playlist' series.id %}" method="post">
                     {% csrf_token %}
                     <button type="submit" class="add-to-playlist-button favourited">
-                        &#9733; <!-- La estrella siempre será roja en la playlist -->
+                        &#9733;
                     </button>
                 </form>
-                
-                
             </div>
             {% endfor %}
         </div>
     </main>
+    
     <footer>
         <p></p>
     </footer>
