--- a/netflix/streaming/templates/streaming/playlist.html
+++ b/netflix/streaming/templates/streaming/playlist.html
@@ -13,7 +13,7 @@
     <header>
         <div class="header-left">
             <form action="{% url 'search-movies' %}" method="get" class="search-form">
-                <img src="{% static 'img/magnifying-glass.png' %}" alt="Buscar" style="width: 20px; vertical-align: middle; margin-right: 10px;">
+                <img src="{% static 'img/magnifying-glass.png' %}" alt="Search" style="width: 20px; vertical-align: middle; margin-right: 10px;">
                 <input type="text" name="q" placeholder="Search..." class="search-bar">
             </form>
         </div>
@@ -22,30 +22,31 @@
         </div>
         <div class="header-right">
             <nav>
-                <a href="{% url 'home' %}">
-                    <img src="{% static 'img/home.png' %}" alt="Home" style="width: 24px; vertical-align: middle; margin-right: 5px;">
-                    Home
-                </a>
-                <a href="{% url 'playlist' %}">
-                    <img src="{% static 'img/checklist.png' %}" alt="Playlist" style="width: 24px; vertical-align: middle; margin-right: 5px;">
-                    Playlist
-                </a>
+                <a href="{% url 'home' %}">Home</a>
+                <a href="{% url 'playlist' %}">Playlist</a>
             </nav>
         </div>
     </header>
     <main>
         <h2 class="section-title">Movies in My Playlist</h2>
         <div class="movie-grid">
-            {% for movie in playlists.movies.all %}
+            {% for movie in playlist.movies.all %}
             <div class="movie-card">
-                <!-- Movie Display -->
+                <img src="https://image.tmdb.org/t/p/w500{{ movie.poster_path }}" alt="{{ movie.title }}" class="movie-poster">
+                <div class="movie-info">
+                    <h3>{{ movie.title }}</h3>
+                    <p>{{ movie.release_date }}</p>
+                    <p>{{ movie.description|truncatechars:100 }}</p>
+                </div>
             </div>
+            {% empty %}
+            <p>No movies in your playlist yet.</p>
             {% endfor %}
         </div>
-    
+
         <h2 class="section-title">Series in My Playlist</h2>
         <div class="series-grid">
-            {% for series in playlists.series.all %}
+            {% for series in playlist.series.all %}
             <div class="series-card">
                 <img src="https://image.tmdb.org/t/p/w500{{ series.poster_path }}" alt="{{ series.title }}" class="series-poster">
                 <div class="series-info">
@@ -53,19 +54,15 @@
                     <p>{{ series.release_date|date:"Y" }}</p>
                     <p>{{ series.description|truncatechars:100 }}</p>
                 </div>
-                <form action="{% url 'add-to-series-playlist' series.id %}" method="post">
-                    {% csrf_token %}
-                    <button type="submit" class="add-to-playlist-button favourited">
-                        &#9733;
-                    </button>
-                </form>
             </div>
+            {% empty %}
+            <p class="empty-playlist-message">No series in your playlist yet.</p>
             {% endfor %}
         </div>
     </main>
-    
+
     <footer>
-        <p></p>
+        <p>&copy; 2024 MovieStream</p>
     </footer>
 </body>
 </html>
