--- a/netflix/streaming/templates/streaming/home.html
+++ b/netflix/streaming/templates/streaming/home.html
@@ -24,15 +24,17 @@
             <nav>
                 <a href="{% url 'home' %}">
                     <img src="{% static 'img/home.png' %}" alt="Home" style="width: 24px; vertical-align: middle; margin-right: 5px;">
-                    Home
+                    Films
                 </a>
-                <a href="{% url 'playlist' %}">
-                    <img src="{% static 'img/checklist.png' %}" alt="Playlist" style="width: 24px; vertical-align: middle; margin-right: 5px;">
-                    Playlist
-                </a>
+                
                 <a href="{% url 'series' %}">
                     <img src="{% static 'img/tv.png' %}" alt="Series" style="width: 24px; vertical-align: middle; margin-right: 5px;">
                     Series
+                </a>
+
+                <a href="{% url 'playlist' %}">
+                    <img src="{% static 'img/checklist.png' %}" alt="Playlist" style="width: 24px; vertical-align: middle; margin-right: 5px;">
+                    Playlist
                 </a>
             </nav>
         </div>
