--- a/netflix/streaming/templates/streaming/home.html
+++ b/netflix/streaming/templates/streaming/home.html
@@ -23,12 +23,12 @@
         <div class="header-right">
             <nav>
                 <a href="{% url 'home' %}">
-                    <img src="{% static 'img/home.png' %}" alt="Home" style="width: 24px; vertical-align: middle; margin-right: 5px;">
+                    <img src="{% static 'img/film.png' %}" alt="Home" style="width: 24px; vertical-align: middle; margin-right: 5px;">
                     Films
                 </a>
                 
                 <a href="{% url 'series' %}">
-                    <img src="{% static 'img/tv.png' %}" alt="Series" style="width: 24px; vertical-align: middle; margin-right: 5px;">
+                    <img src="{% static 'img/tv-show.png' %}" alt="Series" style="width: 24px; vertical-align: middle; margin-right: 5px;">
                     Series
                 </a>
 
