--- a/netflix/streaming/templates/streaming/series.html
+++ b/netflix/streaming/templates/streaming/series.html
@@ -23,8 +23,8 @@
         <div class="header-right">
             <nav>
                 <a href="{% url 'home' %}">
-                    <img src="{% static 'img/home.png' %}" alt="Home" style="width: 24px; vertical-align: middle; margin-right: 5px;">
-                    Home
+                    <img src="{% static 'img/film.png' %}" alt="Home" style="width: 24px; vertical-align: middle; margin-right: 5px;">
+                    Films
                 </a>
                 <a href="{% url 'series' %}">
                     <img src="{% static 'img/tv-show.png' %}" alt="Series" style="width: 24px; vertical-align: middle; margin-right: 5px;">
@@ -62,6 +62,7 @@
             </div>
             {% endfor %}
         </div>
+        
     </main>
     <footer>
         <p>&copy; 2024 MovieStream</p>
