--- a/netflix/streaming/templates/streaming/movie.html
+++ b/netflix/streaming/templates/streaming/movie.html
@@ -42,7 +42,7 @@
         </div>
     </main>
     <footer>
-        <p>&copy; 2024 MovieStream</p>
+        <p>&copy; Alejandro</p>
     </footer>
 </body>
 </html>
