--- a/netflix/streaming/templates/streaming/series.html
+++ b/netflix/streaming/templates/streaming/series.html
@@ -65,7 +65,7 @@
         
     </main>
     <footer>
-        <p>&copy; 2024 MovieStream</p>
+        <p>&copy; Alejandro</p>
     </footer>
 </body>
 </html>
