falta el buscador

--- a/netflix/streaming/templates/streaming/playlist.html
+++ b/netflix/streaming/templates/streaming/playlist.html
@@ -40,7 +40,7 @@
     
     <main>
         <!-- Movies Section -->
-        <h2 class="section-title">Movies in My Playlist</h2>
+        <h2 class="section-title">Films in My Playlist</h2>
         <div class="movie-grid">
             {% for movie in playlist.movies.all %}
             <div class="movie-card">
