--- a/netflix/streaming/templates/streaming/series.html
+++ b/netflix/streaming/templates/streaming/series.html
@@ -39,7 +39,7 @@
     </header>
     
     <main>
-        <h2 class="section-title">Series</h2>
+        <h2 class="section-title">Popular Series</h2>
         <div class="movie-grid">
             {% for series in series %}
             <div class="movie-card">
