--- a/netflix/streaming/templates/streaming/search_results.html
+++ b/netflix/streaming/templates/streaming/search_results.html
@@ -42,28 +42,23 @@
             </div>
             {% endfor %}
         </div>
-        <div class="series-grid">
-            {% for series in series_list %}
-            <div class="series-card">
-                <img src="https://image.tmdb.org/t/p/w500{{ series.poster_path }}" alt="{{ series.title }}" class="series-poster">
-                <div class="series-info">
-                    <h3>{{ series.title }}</h3>
-                    <p>{{ series.release_date }}</p>
-                    <p>{{ series.overview|truncatechars:100 }}</p>
+        <div class="movie-grid">
+            {% if movies %}
+                {% for movie in movies %}
+                <div class="movie-card">
+                    <img src="https://image.tmdb.org/t/p/w500{{ movie.poster_path }}" alt="{{ movie.title }}" class="movie-poster">
+                    <div class="movie-info">
+                        <h3>{{ movie.title }}</h3>
+                        <p>{{ movie.release_date }}</p>
+                        <p>{{ movie.overview|truncatechars:100 }}</p>
+                    </div>
                 </div>
-                <form action="{% url 'add-to-series-playlist' series.id %}" method="post">
-                    {% csrf_token %}
-                    <button type="submit" class="add-to-playlist-button {% if series.id in playlists %}favourited{% endif %}">
-                        {% if series.id in playlists %}
-                        &#9733;
-                        {% else %}
-                        &#9734;
-                        {% endif %}
-                    </button>
-                </form>
-            </div>
-            {% endfor %}
+                {% endfor %}
+            {% else %}
+                <p>No movies found for "{{ query }}".</p>
+            {% endif %}
         </div>
+        
     </main>
     
     <footer>
