--- a/netflix/streaming/templates/streaming/search_results_series.html
+++ b/netflix/streaming/templates/streaming/search_results_series.html
@@ -12,21 +12,34 @@
 <body>
     <header>
         <div class="header-left">
-            <form action="{% url 'search-series' %}" method="get" class="search-form">
+            <form action="{% url 'search-movies' %}" method="get" class="search-form">
                 <img src="{% static 'img/magnifying-glass.png' %}" alt="Search" style="width: 20px; vertical-align: middle; margin-right: 10px;">
-                <input type="text" name="q" placeholder="Search series..." class="search-bar" value="{{ query }}">
+                <input type="text" name="q" placeholder="Search..." class="search-bar" value="{{ query }}">
             </form>
         </div>
         <div class="header-center">
-            <h1>Series Search</h1>
+            <h1>Search for series</h1>
         </div>
         <div class="header-right">
             <nav>
-                <a href="{% url 'home' %}">Home</a>
-                <a href="{% url 'playlist' %}">Playlist</a>
+                <a href="{% url 'home' %}">
+                    <img src="{% static 'img/film.png' %}" alt="Home" style="width: 24px; vertical-align: middle; margin-right: 5px;">
+                    Films
+                </a>
+                
+                <a href="{% url 'series' %}">
+                    <img src="{% static 'img/tv-show.png' %}" alt="Series" style="width: 24px; vertical-align: middle; margin-right: 5px;">
+                    Series
+                </a>
+
+                <a href="{% url 'playlist' %}">
+                    <img src="{% static 'img/checklist.png' %}" alt="Playlist" style="width: 24px; vertical-align: middle; margin-right: 5px;">
+                    Playlist
+                </a>
             </nav>
         </div>
     </header>
+    
     <main>
         <h2 class="section-title">Results for "{{ query }}"</h2>
         {% if series_list %}
@@ -46,7 +59,7 @@
         {% endif %}
     </main>
     <footer>
-        <p>&copy; 2024 MovieStream</p>
+        <p>&copy; Alejandro</p>
     </footer>
 </body>
 </html>
