--- a/netflix/streaming/templates/streaming/search_results_series.html
+++ b/netflix/streaming/templates/streaming/search_results_series.html
@@ -54,10 +54,15 @@
                 </div>
                 <form action="{% url 'add-to-series-playlist' series.id %}" method="post" class="star-form">
                     {% csrf_token %}
-                    <button type="submit" class="add-to-playlist-button">
-                        &#9734; <!-- Estrella para añadir a la lista -->
+                    <button type="submit" class="add-to-playlist-button {% if series.id in playlists %}favourited{% endif %}">
+                        {% if series.id in playlists %}
+                        &#9733; <!-- Filled Star -->
+                        {% else %}
+                        &#9734; <!-- Empty Star -->
+                        {% endif %}
                     </button>
                 </form>
+                
             </div>
             {% endfor %}
         </div>
