--- a/netflix/streaming/templates/streaming/search_results_series.html
+++ b/netflix/streaming/templates/streaming/search_results_series.html
@@ -46,7 +46,7 @@
         <div class="movie-grid">
             {% for series in series_list %}
             <div class="movie-card">
-                <img src="https://image.tmdb.org/t/p/w500{{ series.poster_path }}" alt="{{ series.title }}" class="movie-poster">
+                <img src="https://image.tmdb.org/t/p/w500{{ series.poster_path }}" alt="{{ series.title }}" class="serie-poster">
                 <div class="movie-info">
                     <h3>{{ series.title }}</h3> <!-- Título de la serie -->
                     <p>{{ series.release_date }}</p> <!-- Fecha de lanzamiento -->
