--- a/netflix/streaming/templates/streaming/playlist.html
+++ b/netflix/streaming/templates/streaming/playlist.html
@@ -96,7 +96,7 @@
     </main>
 
     <footer>
-        <p>&copy; Alejandro</p>
+        <p class="footer-text">&copy; Alejandro</p>
     </footer>
 </body>
 </html>
