--- a/netflix/streaming/templates/streaming/home.html
+++ b/netflix/streaming/templates/streaming/home.html
@@ -49,11 +49,22 @@
                 <div class="movie-info">
                     <h3>{{ movie.title }}</h3>
                     <p>{{ movie.release_date }}</p>
+                    <p>{{ movie.description|truncatechars:100 }}</p>
                 </div>
+                <form action="{% url 'add-to-playlist' movie.id %}" method="post" class="star-form">
+                    {% csrf_token %}
+                    <button type="submit" class="add-to-playlist-button {% if movie.id in playlists %}favourited{% endif %}">
+                        {% if movie.id in playlists %}
+                        &#9733; <!-- Filled Star -->
+                        {% else %}
+                        &#9734; <!-- Empty Star -->
+                        {% endif %}
+                    </button>
+                </form>
             </div>
             {% endfor %}
         </div>
-
+        
         
         <div class="movie-grid">
             {% for serie in series %}
@@ -69,7 +80,7 @@
 
     </main>
     <footer>
-        <p>&copy; Alejandro</p>
+        <p class="footer-text">&copy; Alejandro</p>
     </footer>
 </body>
 </html>
