--- a/netflix/streaming/templates/streaming/home.html
+++ b/netflix/streaming/templates/streaming/home.html
@@ -31,13 +31,20 @@
                     <img src="{% static 'img/tv-show.png' %}" alt="Series" style="width: 24px; vertical-align: middle; margin-right: 5px;">
                     Series
                 </a>
-
+            
                 <a href="{% url 'playlist' %}">
                     <img src="{% static 'img/checklist.png' %}" alt="Playlist" style="width: 24px; vertical-align: middle; margin-right: 5px;">
                     Playlist
                 </a>
-            </nav>
+            
+                {% if user.is_authenticated %}
+                    <a href="{% url 'logout' %}">Logout</a>
+                {% else %}
+                    <a href="{% url 'login' %}">Login</a>
+                {% endif %}
+            </nav>            
         </div>
+        
     </header>
        
     <main>
@@ -51,16 +58,21 @@
                     <p>{{ movie.release_date }}</p>
                     <p>{{ movie.description|truncatechars:100 }}</p>
                 </div>
-                <form action="{% url 'add-to-playlist' movie.id %}" method="post" class="star-form">
+                <form action="{% url 'add-to-playlist' movie.id 'movie' %}" method="post" class="star-form">
                     {% csrf_token %}
-                    <button type="submit" class="add-to-playlist-button {% if movie.id in playlists %}favourited{% endif %}">
-                        {% if movie.id in playlists %}
-                        &#9733; <!-- Filled Star -->
-                        {% else %}
-                        &#9734; <!-- Empty Star -->
-                        {% endif %}
-                    </button>
+                    {% if user.is_authenticated %}
+                        <button type="submit" class="add-to-playlist-button {% if movie.id in playlists %}favourited{% endif %}">
+                            {% if movie.id in playlists %}
+                            &#9733;
+                            {% else %}
+                            &#9734;
+                            {% endif %}
+                        </button>
+                    {% else %}
+                        <a href="{% url 'login' %}" class="login-to-save">★</a>
+                    {% endif %}
                 </form>
+                
             </div>
             {% endfor %}
         </div>
