--- a/netflix/streaming/templates/streaming/movie.html
+++ b/netflix/streaming/templates/streaming/movie.html
@@ -14,7 +14,7 @@
         <div class="header-left">
             <form action="{% url 'search-movies' %}" method="get" class="search-form">
                 <img src="{% static 'img/magnifying-glass.png' %}" alt="Search" style="width: 20px; vertical-align: middle; margin-right: 10px;">
-                <input type="text" name="q" placeholder="Search..." class="search-bar">
+                <input type="text" name="q" placeholder="Search films..." class="search-bar">
             </form>
         </div>
         <div class="header-center">
@@ -22,11 +22,18 @@
         </div>
         <div class="header-right">
             <nav>
-                <a href="{% url 'home' %}">Home</a>
-                <a href="{% url 'playlist' %}">Playlist</a>
+                <a href="{% url 'home' %}">Films</a>
+                <a href="{% url 'series' %}">Series</a>
+                {% if user.is_authenticated %}
+                    <a href="{% url 'playlist' %}">Playlist</a>
+                    <a href="{% url 'logout' %}">Logout</a>
+                {% else %}
+                    <a href="{% url 'login' %}">Login</a>
+                {% endif %}
             </nav>
         </div>
     </header>
+    
     <main>
         <h2 class="section-title">Movies</h2>
         <div class="movie-grid">
@@ -37,6 +44,20 @@
                     <h3>{{ movie.title }}</h3>
                     <p>{{ movie.release_date }}</p>
                 </div>
+                <form action="{% url 'add-to-playlist' series.id 'series' %}" method="post" class="star-form">
+                    {% csrf_token %}
+                    {% if user.is_authenticated %}
+                        <button type="submit" class="add-to-playlist-button {% if movie.id in playlists %}favourited{% endif %}">
+                            {% if movie.id in playlists %}
+                            &#9733;
+                            {% else %}
+                            &#9734;
+                            {% endif %}
+                        </button>
+                    {% else %}
+                        <a href="{% url 'login' %}" class="login-to-save">★</a>
+                    {% endif %}
+                </form>
             </div>
             {% endfor %}
         </div>
