--- a/netflix/streaming/templates/streaming/series.html
+++ b/netflix/streaming/templates/streaming/series.html
@@ -22,18 +22,14 @@
         </div>
         <div class="header-right">
             <nav>
-                <a href="{% url 'home' %}">
-                    <img src="{% static 'img/film.png' %}" alt="Home" style="width: 24px; vertical-align: middle; margin-right: 5px;">
-                    Films
-                </a>
-                <a href="{% url 'series' %}">
-                    <img src="{% static 'img/tv-show.png' %}" alt="Series" style="width: 24px; vertical-align: middle; margin-right: 5px;">
-                    Series
-                </a>
-                <a href="{% url 'playlist' %}">
-                    <img src="{% static 'img/checklist.png' %}" alt="Playlist" style="width: 24px; vertical-align: middle; margin-right: 5px;">
-                    Playlist
-                </a>
+                <a href="{% url 'home' %}">Films</a>
+                <a href="{% url 'series' %}">Series</a>
+                {% if user.is_authenticated %}
+                    <a href="{% url 'playlist' %}">Playlist</a>
+                    <a href="{% url 'logout' %}">Logout</a>
+                {% else %}
+                    <a href="{% url 'login' %}">Login</a>
+                {% endif %}
             </nav>
         </div>
     </header>
@@ -49,20 +45,23 @@
                     <p>{{ series.release_date }}</p>
                     <p>{{ series.description|truncatechars:100 }}</p>
                 </div>
-                <form action="{% url 'add-to-series-playlist' series.id %}" method="post" class="star-form">
+                <form action="{% url 'add-to-playlist' series.id 'series' %}" method="post" class="star-form">
                     {% csrf_token %}
-                    <button type="submit" class="add-to-playlist-button {% if series.id in playlists %}favourited{% endif %}">
-                        {% if series.id in playlists %}
-                        &#9733; <!-- Filled Star -->
-                        {% else %}
-                        &#9734; <!-- Empty Star -->
-                        {% endif %}
-                    </button>
+                    {% if user.is_authenticated %}
+                        <button type="submit" class="add-to-playlist-button {% if series.id in playlists %}favourited{% endif %}">
+                            {% if series.id in playlists %}
+                            &#9733;
+                            {% else %}
+                            &#9734;
+                            {% endif %}
+                        </button>
+                    {% else %}
+                        <a href="{% url 'login' %}" class="login-to-save">★</a>
+                    {% endif %}
                 </form>
             </div>
             {% endfor %}
         </div>
-        
     </main>
     <footer>
         <p class="footer-text">&copy; Alejandro</p>
