--- a/netflix/authentication/templates/authentication/signup.html
+++ b/netflix/authentication/templates/authentication/signup.html
@@ -12,5 +12,6 @@
         {{ form.as_p }}
         <button type="submit">Sign Up</button>
     </form>
+    <p>Already have an account? <a href="{% url 'login' %}">Login</a></p>
 </body>
 </html>
