--- a/netflix/streaming/templates/streaming/series.html
+++ b/netflix/streaming/templates/streaming/series.html
@@ -35,9 +35,15 @@
                     Playlist
                 </a>
                 {% if user.is_authenticated %}
-                    <a href="{% url 'logout' %}">Logout</a>
+                <a href="{% url 'logout' %}">
+                    <img src="{% static 'img/logout.png' %}" alt="Logout" style="width: 24px; vertical-align: middle; margin-right: 5px;">
+                    Logout
+                </a>
                 {% else %}
-                    <a href="{% url 'login' %}">Login</a>
+                    <a href="{% url 'login' %}">
+                        <img src="{% static 'img/logout.png' %}" alt="login" style="width: 24px; vertical-align: middle; margin-right: 5px;">
+                        Login
+                    </a>
                 {% endif %}
             </nav>
         </div>
